fix ui overlap of search icon on search text

--- a/client/css/header.styl
+++ b/client/css/header.styl
@@ -63,7 +63,8 @@ nav.navbar-inverse.navbar-custom
     input 
       height: 30px;
       background: brand-blue
-      text-indent: 25px;
+      // text-indent: 25px;
+      padding-left: 20px;
       border 0px
       border-bottom 2px solid spark-grey
       width 175px 
